mobilizon-ton/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mobilizon
  labels:
    name: mobilizon
