mobilizon-ton/mobilizon.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mobilizon
  namespace: mobilizon
  labels:
    app: mobilizon
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mobilizon
  template:
    metadata:
      labels:
        app: mobilizon
    spec:
      containers:
      - name: mobilizon
        image: framasoft/mobilizon:latest
        ports:
        - containerPort: 4000
        volumeMounts:
        - name: uploads-storage
          mountPath: /var/lib/mobilizon/uploads
        resources:
          requests:
            memory: "112Mi"
            cpu: "10m"
          limits:
            memory: "1Gi"
            cpu: "500m"
      volumes:
      - name: uploads-storage
        persistentVolumeClaim:
          claimName: mobilizon-uploads-pvc
