mobilizon-ton/mobilizon-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mobilizon
  namespace: mobilizon
  labels:
    app: mobilizon
spec:
  selector:
    app: mobilizon
  ports:
  - port: 4000
    targetPort: 4000
  type: ClusterIP
