mobilizon-ton/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: mobilizon
  namespace: mobilizon
spec:
  hosts:
  - mc.lag0.com.br
  gateways:
  - istio-system/lag0-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 4000
        host: mobilizon
    timeout: 30s
